[package]
name = "gmf"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
httpdate = "1.0.3"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json","multipart", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
