[package]
name = "gmf-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.8.3", features = ["rustls"] }
aws-sdk-s3 = "1.100.0"
bytes = "1.10.1"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
