[package]
name = "gmf-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
log = "0.4.28"
rust-s3 = { version = "0.37.0", default-features = false, features = [
    "tokio-rustls-tls",
    "fail-on-err",
] }
dirs = "6.0.0"
bitvec = "1.0.1"
bytemuck = "1.24.0"
base64 = "0.22.1"
