[package]
name = "gmf-remote"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gmf-remote"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
r2 = { path = "../r2" }
rcgen = "0.14.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
async-stream = "0.3.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
    "time",
] }
time = { version = "0.3.41", features = ["formatting", "macros"] }
futures = "0.3.31"
