[package]
name = "gmf-remote"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gmf-remote"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
futures = "0.3.31"
futures-util = "0.3.31"
gmf-common = { path = "../gmf-common" }
hex = "0.4.3"
rcgen = "0.14.3"
rust-s3 = { version = "0.35.1", default-features = false, features = ["tokio-rustls-tls"] }
rustls = { version = "0.23.29", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
shellexpand = "3.1.1"
time = { version = "0.3.41", features = ["formatting", "macros"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "fmt",
    "time",
] }
