[package]
name = "gmf-remote"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
futures = "0.3.31"
gmf-common = { path = "../gmf-common" }
shellexpand = "3.1.1"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "registry"] }
