[package]
name = "gmf"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-util = "0.3.31"
gmf-common = { path = "../gmf-common" }
indicatif = { version = "0.18.0", features = ["tokio"] }
log = "0.4.27"
reqwest = { version = "0.12.22", default-features = false, features = [
    "stream",
    "json",
    "rustls-tls",
    "http2",
] }
reqwest-eventsource = "0.6.0"
russh = "0.53.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.8.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
sha2 = "0.10.9"

[build-dependencies]
flate2 = "1.1.2"
reqwest = { version = "0.12.22", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
sha2 = "0.10.9"
tar = "0.4.44"
