[package]
name = "gmf"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
dirs = "6.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
gmf-common = { path = "../gmf-common" }
indicatif = { version = "0.18.0", features = ["tokio"] }
log = "0.4.27"
russh = "0.53.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
toml = "0.8.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
flate2 = "1.1.2"
sha2 = "0.10.9"
tar = "0.4.44"
