[package]
name = "gmf"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
gmf-common = { path = "../gmf-common" }
indicatif = { version = "0.18.3", features = ["tokio"] }
log = "0.4.28"
russh = "0.53.0"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.23"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
flate2 = "1.1.5"
sha2 = "0.10.9"
tar = "0.4.44"
