[package]
name = "r2"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.98.0"
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = "1.46.1"
